<resources>
    <string name="app_name">Harmony</string>

    <!--Menu titles-->
    <string name="others">Others</string>
    <string name="profile">Profile</string>
    <string name="groups">Groups</string>
    <string name="settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="logout">Logout</string>

    <!--    Sign In-->
    <string name="sign_in_to_continue_caps">SIGN IN TO CONTINUE</string>
    <string name="email_address_or_username_caps">EMAIL ADDRESS OR USERNAME</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="forgot_your_password_caps"><u>FORGOT YOUR PASSWORD?</u></string>
    <string name="authorize_with_caps">AUTHORIZE WITH</string>
    <string name="don_t_have_an_account_caps">DON’T HAVE AN ACCOUNT?</string>
    <string name="action_sign_in">Sign In</string>

    <!--    Sign Up-->
    <string name="sign_up_to_continue_caps">SIGN UP TO CONTINUE</string>
    <string name="already_have_an_account_caps">ALREADY HAVE AN ACCOUNT?</string>
    <string name="prompt_username">USERNAME</string>
    <string name="prompt_email">EMAIL</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="email_address_caps">EMAIL ADDRESS</string>

    <!--    Settings-->
    <string name="user_account">User account</string>
    <string name="edit">Edit</string>
    <string name="spotify">Spotify</string>
    <string name="connections">Connections</string>

    <!--Groups-->
    <string name="latest_groups">Latest groups</string>
    <string name="create_a_new_group">Create a new group…</string>

    <!--New group-->
    <string name="a_new_group">A new group</string>
    <string name="group_name">Group Name</string>
    <string name="description_caps">DESCRIPTION</string>
    <string name="create">Create</string>
    <string name="cancel"><u>Cancel</u></string>
    <string name="pick_picture">Pick Picture</string>

    <!--Share group-->
    <string name="share_group">Share group</string>
    <string name="your_group_has_created">Your group has created!</string>
    <string name="share_this_link">Share this link with your friends to make a collaborative playlist</string>
    <string name="link_example"><u>https://harmony/eyJhbGciOiJIUzUxMiJ9.eyJzdWIiOiI0OCIsImlhdCI6MTYyMDE2MTI1NCwiZXhwIjoxNjIwMjQ3NjU0fQ.Sh3Fqo3yV2jm-3Y9TxR6x9Hk18mcQ4r2F5vCxr84hnOFJ4ewBYRoVRUIYbcWGuKuqSpJuzZH0kPlfcS4C2QQYQ</u></string>
    <string name="share_link">Share Link</string>

    <string name="auth_failed">Authentication failed</string>
    <string name="timeout">Timeout</string>
    <string name="invalid_params">Invalid parameters</string>
    <string name="ban_user">User is ban</string>
    <string name="unknown_method">Unknown method</string>
    <string name="not_enough_perm">Not enough permissions</string>
    <string name="request_send_limit">Request sending limit reached</string>
    <string name="user_exist">User already exists</string>
    <string name="user_not_found">User is not found</string>
    <string name="wrong_token">Wrong token</string>
    <string name="smth_went_wrong">Something went wrong</string>
    <string name="spotify_tokens_not_received">Spotify tokens didn\'t received</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Not a valid password</string>
    <string name="user_does_not_exist">User is nullable</string>
    <string name="token_does_not_exist">Token does not exist</string>
    <string name="success_spotify_auth">Success spotify auth</string>
    <string name="loading_failed">Loading failed</string>
    <string name="spotify_access_token_expired">The spotify access token expired</string>
    <string name="spotify_id_integrated">This spotify id is integrated</string>
    <string name="create_a_new_group_and_invite_your_friends_it_s_free">Create a new group and invite your friends. It`s free!</string>
    <string name="add_a_new_group">Add a new group</string>
    <string name="join_a_group_with_an_invite_code_or_link">Join a group with an invite code or link.</string>
    <string name="join">Join</string>
    <string name="group_link_or_code">Group link or code</string>
    <string name="add_a_group">Add a group</string>
    <string name="lobby">Lobby</string>
    <string name="users_of_the_group">Users of the group</string>
    <string name="add_my_music">Add my music</string>
    <string name="lobby_s_playlists">Lobby’s playlists</string>
    <string name="add_a_user">Add a user</string>
    <string name="leaved_from_group">Leaved from the group</string>
    <string name="ready">Ready</string>
    <string name="not_ready">Not ready?</string>
    <string name="amazing_now_wait_till_your_friends_add_their_tracks">Amazing!<br/> Now, wait till your friends add their tracks</string>
</resources>