<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up_image"
    tools:context=".screen.auth.signup.SignUpFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/register__logo"
        android:layout_width="42dp"
        android:layout_height="43dp"
        android:layout_marginTop="40dp"
        android:scaleType="fitCenter"
        android:scaleX="1.3"
        android:scaleY="1.3"
        android:src="@drawable/harmony_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/register_sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:letterSpacing="0.08"
        android:text="@string/sign_up_to_continue_caps"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register__logo"
        app:layout_constraintVertical_bias="0.2" />

    <LinearLayout
        android:id="@+id/register_fields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_sign_up_text"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register__username"
            style="@style/textPrimary"
            android:layout_width="335dp"
            android:layout_height="52dp"
            android:background="@drawable/sign_edit_text_frame_top"
            android:hint="@string/prompt_username"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register__email"
            style="@style/textPrimary"
            android:layout_width="335dp"
            android:layout_height="52dp"
            android:background="@drawable/sign_edit_text_frame_middle"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register__password"
            style="@style/textPrimary"
            android:layout_width="335dp"
            android:layout_height="52dp"
            android:background="@drawable/sign_edit_text_frame_bottom"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/register__register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/pink_circle_button"
        android:enabled="false"
        android:src="@drawable/ic_right_arrow"
        app:layout_constraintBottom_toTopOf="@id/register__already_have_an_acc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_fields"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/register__already_have_an_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="41dp"
        android:fontFamily="@font/lato_regular"
        android:letterSpacing="0.16"
        android:text="@string/already_have_an_account_caps"
        android:textColor="#8D99B2"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <ProgressBar
        android:id="@+id/register__loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:padding="160dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>